--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,12 +1,13 @@
-FROM node:25-alpine  
+FROM node:alpine
 
 WORKDIR /app
 
-COPY package*.json ./
+COPY ./package.json ./
+
 RUN npm install
 
-COPY . .
+COPY ./ ./
 
-EXPOSE 5000   
+EXPOSE 5000
 
-CMD ["npm", "start"]   
+CMD ["npm", "start"]
